--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+This is a copy of https://bitbucket.org/ostochast/imgcons/src
+
+As practice, I'm going through the code, cleaning it up, and making it better.
+
+(original readme follows)
+
 Install:
 
 1. 
